Another java 11 feature